WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38422
REGRESSION (
r58273
): Visited links do not change color immediately when Cmd-clicked
https://bugs.webkit.org/show_bug.cgi?id=38422
Summary
REGRESSION (r58273): Visited links do not change color immediately when Cmd-c...
Maciej Stachowiak
Reported
2010-05-01 12:28:55 PDT
REGRESSION (
r58273
): Visited links do not change color immediately when Cmd-clicked
Attachments
Patch
(9.03 KB, patch)
2010-05-01 12:32 PDT
,
Maciej Stachowiak
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Maciej Stachowiak
Comment 1
2010-05-01 12:32:10 PDT
Created
attachment 54855
[details]
Patch
Sam Weinig
Comment 2
2010-05-01 12:36:09 PDT
Comment on
attachment 54855
[details]
Patch WebCore/ChangeLog:23 + to make a manual test that supports visited link coloring. I think you mean automated test here. r=me.
Maciej Stachowiak
Comment 3
2010-05-01 12:56:09 PDT
After further study, it might be possible to make an automated test, but I'll land that separately.
Maciej Stachowiak
Comment 4
2010-05-01 13:24:01 PDT
Committed
r58636
: <
http://trac.webkit.org/changeset/58636
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug